fix issure light/dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -82,6 +82,11 @@ img {
    background-color: var(--light-color);
 }
 
+.dark-mode {
+   color: var(--light-color);
+   background-color: var(--dark-color);
+}
+
 @media (prefers-color-scheme: light) {
    :root {
       color: var(--dark-color);
